# OpenXR-API-Layers-GUI

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README-Windows.md  README.md  vcpkg.json
.github/: FUNDING.yml
.github/actions/configure-environment/: action.yaml
.github/workflows/: build.yml  ci.yml  combine-artifacts.yml  populate-vcpkg-cache.yaml
cmake/: sourcelink.cmake
icon/: LICENSE  icon.rc  rasterize.ps1
src/: APILayer.cpp  APILayer.hpp  APILayerDetails.cpp  APILayerSignature.hpp  APILayerStore.hpp  APILayerStore_stub.cpp  APILayerStore_windows.cpp  APILayerStore_windows.hpp  APILayers.hpp  APILayers_stub.cpp  APILayers_windows.cpp  Architectures.hpp  CMakeLists.txt  Config.in.hpp  Config_windows.in.hpp  ConstexprString.hpp  EnabledExplicitAPILayerStore.cpp  EnabledExplicitAPILayerStore.hpp  GUI.cpp  GUI.hpp  GUI_windows.cpp  GetActiveRuntimePath.hpp  KnownLayers.cpp  KnownLayers.hpp  LayerRules.cpp  LayerRules.hpp  Linter.cpp  Linter.hpp  LoaderData.cpp  LoaderData.hpp  LoaderDataMain.cpp  LoaderDataMain.hpp  OverridePathsAPILayerStore.cpp  OverridePathsAPILayerStore.hpp  Platform.cpp  Platform.hpp  PlatformGUI_stub.cpp  PlatformGUI_windows.cpp  Runtime.hpp  SaveReport.cpp  (+13 more)
src/linters/: BadInstallationLinter.cpp  DisabledByEnvironmentLinter.cpp  DuplicatesLinter.cpp  ExplicitLayerArchitecturesLinter.cpp  OrderingLinter.cpp  SkippedByLoaderLinter.cpp
src/linters/windows/: NotADWORDLinter.cpp  OpenXRToolkitLinter.cpp  OutdatedOpenKneeboardLinter.cpp  ProgramFilesLinter.cpp  UltraleapLastLinter.cpp  UnsignedDllLinter.cpp  ViveLayersLinter.cpp  XRNeckSaferLinter.cpp
src/portability/: filesystem.hpp
src/std23/: ranges.hpp  utility.hpp
src/stubs/: APILayerStore.cpp  PlatformGUI.cpp
src/windows/: CheckForUpdates.cpp  CheckForUpdates.hpp  GetActiveRuntimePath.cpp  GetKnownFolderPath.hpp  PlatformGUI.cpp  SaveReport_wWinMain.cpp  WindowsAPILayerStore.cpp  WindowsAPILayerStore.hpp  WindowsPlatform.cpp  WindowsPlatform.hpp  check.hpp  wWinMain-create-report.cpp  wWinMain-gui.cpp  wWinMain-loader-data.cpp  wWinMain.cpp
